# literature-conflict-graph

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  anomalies.jsonl  docker-compose.yml  graph.json  hypotheses.jsonl  index.html  papers.jsonl  pyproject.toml  selected_hypotheses.md
.github/workflows/: pages.yml  tests.yml
automation/cron/: crontab.example  generated.crontab
automation/issues/: fix_bundle.json  issues.jsonl
docs/: atlas-aigraph-fit-recon-brief.md  atlas-aigraph-fit-recon.md  controlled-validation-design.md  influence-prediction-design.md  influence-prediction-validation.md  intern-atlas-pivot.md  intern-atlas-schema-compat.md  notion_status_paste.md  runner-quickstart.md  v0.7-pipeline-freeze.md  work-status.md
scripts/: aigraph_query.py  atlas_conflict_finder.py  cohort_from_intern_atlas.py  finish_local_run.py  run_local_corpus.py  setup_github_project.py  validate_influence_backtest.py
tests/: test_aigraph_query.py  test_anomalies.py  test_automation.py  test_browser_smoke.py  test_citation_stance.py  test_citation_stance_validation.py  test_community.py  test_corpus.py  test_creator.py  test_extract.py  test_fetch_arxiv.py  test_fetch_openalex.py  test_finish_local_run.py  test_graph.py  test_hierarchy.py  test_influence.py  test_insights.py  test_llm_extract.py  test_llm_hypotheses.py  test_models.py  test_novelty_check.py  test_overview.py  test_paper_reader.py  test_paper_select.py  test_realign.py  test_report.py  test_run_local_corpus.py  test_scoring.py  test_server.py  test_visualize.py
(+462 files in other folders)
