[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aigraph"
version = "0.1.0"
description = "A graph-based literature conflict explorer for AI paper claims."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "typer>=0.12",
    "rich>=13.0",
    "networkx>=3.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
real = [
    "httpx>=0.27",
    "openai>=1.40",
    "python-dotenv>=1.0",
]

[project.scripts]
aigraph = "aigraph.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
